# open321

./: .gitignore  AUTHORS  CMakeLists.txt
Data/example/: Sigma.mtx  solution.mtx
Data/test/: precond_solution.mtx  rhs.mtx  rhs_extracted.mtx
examples/: CMakeLists.txt
examples/qh_preconditioning_example/: CMakeLists.txt  main.cpp  qh_example_config.hpp.in
open321/: CMakeLists.txt
open321/include/: OperatorWithProjection.hpp  ProjectedQuasiHelmholtzEFIE.hpp  QuasiHelmholtzEFIESolver.hpp  QuasiHelmholtzProjector.hpp  constants.hpp  open321_common.hpp  open321_config.hpp.in  utility.hpp
open321/src/: CMakeLists.txt  dummy.cpp
tests/: CMakeLists.txt
tests/open321_qh_tests/: CMakeLists.txt  qh_efie_solver.cpp  qh_test_config.hpp.in
